--- a/css/a1.css
+++ b/css/a1.css
@@ -1,7 +1,8 @@
 .carousel-inner img {
     width: 100%;
-    height: 400px;
+    height: 280px;
     opacity: 0.5;
+    object-fit: cover;
 }
 
 .carousel-inner .container{
