--- a/css/a1.css
+++ b/css/a1.css
@@ -1,3 +1,35 @@
+#a1-row-div-form{
+    margin:0px !important;
+}
+
+#a1-form{
+    padding:20px 1% !important;
+}
+
+#a1-row-div-form div{
+    margin:16px 0px !important;
+    padding:1% !important;
+}
+
+#a1-search-button{
+    width: 100% auto;
+}
+
+
+.form-check-label{
+    font-size:12px !important;
+    color:#999999 !important;
+    text-align: left !important;
+    width: 100%;
+    position: absolute;
+    top: -8 px;
+    left: 16px;
+  }
+  
+  #departureday, #returnday{
+    position: relative;
+  }
+
 .carousel-inner img {
     width: 100%;
     height: 280px;
@@ -45,3 +77,5 @@
     transform: translateX(120%);
     color: black !important;
 }
+
+
