add log in, sign up and contact us pages

--- a/public/custom.scss
+++ b/public/custom.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Cabin+Condensed');
-
+@import '~pretty-checkbox/src/pretty-checkbox.scss';
 $theme-colors: (
   "primary": #D70303,
   "danger": #ff4136,
