--- a/public/partials/handlebars-navbar-guess-partial.html
+++ b/public/partials/handlebars-navbar-guess-partial.html
@@ -1,6 +1,6 @@
 <script id="navbar-guess-detail-template" type="text/x-handlebars-template">
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light" id="my-navbar">
-        <a class="navbar-brand" href="#"><img id="homeLogo" src="img/Logo/black.png" alt=""></a>
+        <a class="navbar-brand" href="index.html"><img id="homeLogo" src="img/Logo/black.png" alt=""></a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
             aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -20,10 +20,10 @@
                                 placeholder="Searching">
                         </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About us</a>
+                    <a class="nav-link" href="a3_contact-us.html">Contact us</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a name="" id="" class="btn btn-outline-secondary" href="#" role="button">Sign up</a>
+                    <a name="" id="" class="btn btn-outline-secondary" href="b2_sign-up.html" role="button">Sign up</a>
                 </li>
             </ul>
         </div>
