--- a/public/css/a1.css
+++ b/public/css/a1.css
@@ -1,35 +1,16 @@
-#a1-row-div-form{
-    margin:0px !important;
-}
-
-#a1-form{
-    padding:20px 1% !important;
-}
-
-#a1-row-div-form div{
-    margin:16px 0px !important;
-    padding:1% !important;
-}
-
-#a1-search-button{
-    width: 100% auto;
-}
-
-
-.form-check-label{
-    font-size:12px !important;
-    color:#999999 !important;
-    text-align: left !important;
-    width: 100%;
+.a1-overlay {
+    background-image: url("../img/A1/backgr.jpg");
+    background-size: cover;
+    content: "";
+    display: block;
     position: absolute;
-    top: -8 px;
-    left: 16px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+    opacity: 0.4;
   }
-  
-  #departureday, #returnday{
-    position: relative;
-  }
-
 .carousel-inner img {
     width: 100%;
     height: 280px;
