--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1840,9 +1840,9 @@ pre code {
 .form-control:focus {
   color: #495057;
   background-color: #fff;
-  border-color: #fd5d5d;
+  border-color: #999999;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(215, 3, 3, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.25);
 }
 .form-control::placeholder {
   color: #6c757d;
@@ -3320,7 +3320,7 @@ input[type=button].btn-block {
   box-shadow: 0 0 0 0.2rem rgba(215, 3, 3, 0.25);
 }
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #fd5d5d;
+  border-color: #999999;
 }
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
   color: #fff;
@@ -3349,7 +3349,7 @@ input[type=button].btn-block {
   pointer-events: none;
   content: "";
   background-color: #fff;
-  border: #adb5bd solid 1px;
+  border: #999999 solid 1px;
 }
 .custom-control-label::after {
   position: absolute;
