--- a/public/partials/handlebars-navbar-guess-partial.html
+++ b/public/partials/handlebars-navbar-guess-partial.html
@@ -7,7 +7,7 @@
         </button>
         <div class="collapse navbar-collapse" style="width:100%" id="collapsibleNavId">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                    <li class="nav-item align-items-center">
+                    <li class="nav-item d-flex align-content-center justify-content-center align-items-center">
                             <div class="icon-container">
                                 <a id="search-toggle" class="nav-link" href="#">
                                     <i class="icon fas fa-search" style="font-size:16px"></i></a>
