--- a/public/partials/handlebars-searchform-partial.html
+++ b/public/partials/handlebars-searchform-partial.html
@@ -36,7 +36,7 @@
 
             </div>
             <div class="col-lg-1 col-m-2 col-sm-5 d-flex justify-content-center">
-                <button id="searchform-search-button" type="button" class="btn btn-primary">Search</button>
+                <a name="" id="searchform-search-button" class="btn btn-primary" href="a2-detail.html" role="button">Search</a>
             </div>
         </div>
 
