--- a/public/partials/handlebars-navbar-user-partial.html
+++ b/public/partials/handlebars-navbar-user-partial.html
@@ -1,13 +1,13 @@
-<script id="navbar-guess-detail-template" type="text/x-handlebars-template">
+<script id="navbar-user-detail-template" type="text/x-handlebars-template">
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light" id="my-navbar">
-            <a class="navbar-brand" href="#"><img id="homeLogo" src="img/Logo/black.png" alt=""></a>
+            <a class="navbar-brand" href="index.html"><img id="homeLogo" src="img/Logo/black.png" alt=""></a>
             <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
                 aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" style="width:100%" id="collapsibleNavId">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                    <li class="nav-item align-items-center">
+                    <li class="nav-item d-flex align-content-center justify-content-center align-items-center">
                         <div class="icon-container">
                             <a id="search-toggle" class="nav-link" href="#">
                                 <i class="icon fas fa-search" style="font-size:16px"></i></a>
@@ -19,13 +19,14 @@
                             <input type="text" class="form-control-plaintext control-inline my-inpyt-text"
                             placeholder="Searching">
                     </li>
+                    
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About us</a>
+                        <a class="nav-link" href="a3_contact-us.html">Contact us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="b3_profile.html">
                             <img id="user-avatar" src={{{avatarlink}}}>
-                            <p style="display: inline;" id="username-navbar">{{username}}</p>
+                            <p style="display: inline;" id="username-navbar">{{name}}</p>
                         </a>
                     </li>
 
@@ -33,9 +34,9 @@
                             <button type="button" class="btn dropdown-toggle align-items-center" data-toggle="dropdown">
                             </button>
                             <div class="dropdown-menu dropdown-menu-right">
-                                <a class="dropdown-item" href="#">Link 1</a>
-                                <a class="dropdown-item" href="#">Link 2</a>
-                                <a class="dropdown-item" href="#">Link 3</a>
+                                <a class="dropdown-item" href="#">Profile</a>
+                                <a class="dropdown-item" href="#">Help</a>
+                                <a class="dropdown-item" href="#">Log out</a>
                             </div>
                     </li>
                 </ul>
