--- a/public/css/main.css
+++ b/public/css/main.css
@@ -57,7 +57,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 body {
   margin: 0;
   font-family: "Cabin Condensed", sans-serif !important;
-  font-size: 1rem;
+  font-size: 18px;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
@@ -2835,8 +2835,7 @@ input[type=button].btn-block {
 }
 
 .dropdown-menu-right {
-  top: 40px;
-  right: 72px;
+  right: 0px;
   left: auto;
 }
 
