--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,7 +122,7 @@ span{
 }
 
 .form-check-label{
-  font-size:12px !important;
+  font-size:14px !important;
   color:#999999 !important;
   text-align: left !important;
   position: absolute;
@@ -167,7 +167,7 @@ span{
 
 .label{
   color: #999999;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .big-label{
@@ -178,4 +178,10 @@ span{
 #ticket-info{
   transform: translateX(24px);
   padding: 10px 24px;
+}
+
+#my-navbar .dropdown-menu-right {
+  right: 80px;
+  left: auto;
+  transform: translateY(-12px);
 }
