--- a/public/partials/handlebars-search-result-partial.html
+++ b/public/partials/handlebars-search-result-partial.html
@@ -350,7 +350,13 @@
     </div>
     <hr>
     {{/each}}
-
+    <ul class="pagination d-flex justify-content-center">
+            <li class="page-item"><a class="page-link" href="#"><</a></li>
+            <li class="page-item"><a class="page-link 1 active" href="#">1</a></li>
+            <li class="page-item"><a class="page-link 2" href="#">2</a></li>
+            <li class="page-item"><a class="page-link 3" href="#">3</a></li>
+            <li class="page-item"><a class="page-link" href="#">></a></li>
+    </ul>
     </div>
 
      <div class="modal fade" id="myModal">
