--- a/public/css/a3.css
+++ b/public/css/a3.css
@@ -1,6 +1,6 @@
 .a3-container {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 
@@ -14,6 +14,7 @@
 .a3-title {
     margin: 24px !important;
     margin-bottom: 10px !important;
+    margin-top: 10px !important;
     font-size: 36px !important;
 }
 
@@ -39,7 +40,7 @@
 }
 
 .panel-right form h4{
-    margin-top: 20px;
+    margin-top: 18px;
 }
 
 .panel-right textarea{
