--- a/public/css/b1.css
+++ b/public/css/b1.css
@@ -110,43 +110,43 @@ span.psw a {
 .subline-left {
     margin-left: 10px;
     float: left;
-    margin-top: 81px;
+    margin-top: 15%;
     display: block;
-    width: 33%;
+    width: 30%;
     height: 1%;
     opacity: 50%;
     border-bottom: 1px solid #999999;
-    position: relative;
+    position: absolute;
 }
 
 .subline-right {
     float: right;
-    margin-top: 32px;
-    margin-right: 10px;
+    margin-top: 15%;
+    margin-left: 59%;
     display: block;
-    width: 35%;
+    width: 28%;
     height: 1%;
     opacity: 50%;
     border-bottom: 1px solid #999999;
-    position: relative;
+    position: absolute;
 }
 
 #text-connect {
-    display: block;
-    float: left;
-    margin-top: 68px;
-    margin-left: 12px;
-    text-align: center;
+    position: absolute;
+    padding-top: 13%;
+    margin-left: 35%;
+
+    
     color: #999999;
 }
 
 #icon-fb {
-    width: 55%;
+    width: 55% !important;
     height: auto;
 }
 
 #icon-gg {
-    width: 45%;
+    width: 45% !important;
     height: auto;
 }
 
