--- a/public/partials/handlebars-navbar-user-partial.html
+++ b/public/partials/handlebars-navbar-user-partial.html
@@ -24,7 +24,7 @@
                         <a class="nav-link" href="a3_contact-us.html">Contact us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="b3_profile.html">
+                        <a class="nav-link" href="b3_profile_history.html">
                             <img id="user-avatar" src={{{avatarlink}}}>
                             <p style="display: inline;" id="username-navbar">{{name}}</p>
                         </a>
