--- a/public/css/style.css
+++ b/public/css/style.css
@@ -185,3 +185,37 @@ span{
   left: auto;
   transform: translateY(-12px);
 }
+.active-filter{
+  font-weight: bold;
+}
+
+.my-table .table-header{
+  background-color:#DDD;
+  margin-bottom: 10px; 
+  cursor: pointer;
+}
+.my-table div.row{
+  padding: 10px 16px !important;
+}
+
+.page-item .page-link{
+  border:none !important;
+  color: #999999 !important;
+  padding:4px 8px !important;
+  margin:4px;
+}
+
+.page-item  .active{
+  border-bottom:#494949 solid 2px !important;
+  color: #494949 !important;
+}
+
+
+.page-item .page-link:focus{
+  box-shadow: none !important;
+
+}
+
+.p-relative{
+  position: relative !important;
+}
