--- a/public/partials/handlebars-search-result-partial.html
+++ b/public/partials/handlebars-search-result-partial.html
@@ -1,5 +1,5 @@
 <script id="searchResult-detail-template" type="text/x-handlebars-template">
-    <div class="container-fluid  text-center" id="search-table-result">
+    <div class="container-fluid  text-center my-table" id="search-table-result">
             <div class="row table-header big-label">
                     <div class="col-2">Liscense Plate</div>
                     <div class="col-2">Type</div>
