--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,6 +35,43 @@
   padding:4px 16px !important;
 }
 
+#my-navbar.admin-navbar {
+  background-color: #494949 !important;
+  border-bottom: #494949 solid 1px;
+  color:white !important;
+  padding:4px 16px !important;
+}
+
+#my-navbar.admin-navbar .nav-link{
+  color:white !important;
+}
+
+#my-navbar.admin-navbar input{
+  color:white !important;
+}
+
+#my-navbar.admin-navbar .my-inpyt-text {
+  border-bottom: #ddd solid 1px !important;
+  padding-bottom: 4px !important;
+  margin: 0 !important;
+}
+
+#my-navbar.admin-navbar .my-inpyt-text::placeholder {
+  color:#ccc;
+}
+
+#my-navbar.admin-navbar button{
+  color: white !important;
+}
+
+#my-navbar.admin-navbar button:hover{
+  transform: scale(1.1);
+}
+
+
+
+
+
 h1 {
   font-size: 48px !important;
   margin: 24px !important;
