--- a/public/partials/handlebars-navbar-admin-partial.html
+++ b/public/partials/handlebars-navbar-admin-partial.html
@@ -21,9 +21,9 @@
                     </li>
                     
                     <li class="nav-item">
-                        <a class="nav-link" href="b3_profile_history.html">
-                            <img id="user-avatar" src={{{avatarlink}}}>
-                            <p style="display: inline;" id="username-navbar">{{name}}</p>
+                        <a class="nav-link position-relative" href="b3_profile_history.html">
+                            <img id="user-avatar" class="position-absolute p-auto" style="max-height: 100%; transform: translateY(-50%); top:50%" src={{{avatarlink}}}>
+                            <p style="display: inline; padding-left:46px" id="username-navbar">{{name}}</p>
                         </a>
                     </li>
 
