--- a/public/partials/handlebars-search-result-partial.html
+++ b/public/partials/handlebars-search-result-partial.html
@@ -367,15 +367,15 @@
         <div class="modal-header pb-0">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
-        <ul class="nav nav-tabs m-auto d-flex align-content-center mb-3" role="tablist">
+        <ul class="nav nav-tabs d-flex align-content-center mb-3 text-center" style="margin: 2em 15%" role="tablist">
                 <li class="nav-item">
-                  <a id="ahome" class="nav-link a2-nav-link active" data-toggle="tab" href="#home">Passenger Information</a>
+                  <a id="ahome" class="nav-link a2-nav-link active" data-toggle="tab" href="#home">1. Passenger Information</a>
                 </li>
                 <li class="nav-item">
-                  <a id="amenu1" class="nav-link a2-nav-link" data-toggle="tab" href="#menu1">Contact Details</a>
+                  <a id="amenu1" class="nav-link a2-nav-link disabled" data-toggle="tab" href="#menu1">2. Contact Details</a>
                 </li>
                 <li class="nav-item">
-                  <a id="amenu2" class="nav-link a2-nav-link" data-toggle="tab" href="#menu2">Payment Details</a>
+                  <a id="amenu2" class="nav-link a2-nav-link disabled" data-toggle="tab" href="#menu2">3. Payment Details</a>
                 </li>
               </ul>
         <!-- Modal body -->
