--- a/public/partials/handlebars-searchform-partial.html
+++ b/public/partials/handlebars-searchform-partial.html
@@ -1,4 +1,5 @@
 <script id="searchform-detail-template" type="text/x-handlebars-template">
+
     <div class="container justify-content-center align-content-center" id="searchform">
         <div class="row">
             <div class="col-md-1 col-sm-0 "></div>
@@ -18,7 +19,7 @@
                 <br>
             </div>
         </div>
-        <div id="searchform-row-div-form" class="row align-content-center justify-content-center">
+        <div id="searchform-row-div-form" class="row align-items-center justify-content-center">
             <div class="col-md-2 col-sm-4 mb-3">
                 <input type="text" class="form-control-plaintext control-inline my-inpyt-text" placeholder="From">
             </div>
@@ -27,18 +28,27 @@
                 <input type="text" class="form-control-plaintext control-inline my-inpyt-text" placeholder="To">
             </div>
             <div class="col-md-3 col-sm-4">
-                <label class="form-check-label" for="bday">Departure Day</label>
-                <input id="searchform-departureday" type="date" id="departureday" max="3000-12-31" min="1000-01-01" class="form-control">
+                <div class="input-date m-0">
+                    <!-- <label class="form-check-label" for="bday">Departure Day</label> -->
+                    <input placeholder="Departure Day" id="searchform-departureday" type="text"
+                        class="datepicker-here my-date-time-picker form-control" data-language='en' data-position='bottom right' />
+                    <i class="far fa-calendar-alt icon-date m-auto"></i>
+                </div>
             </div>
             <div class="col-md-3 col-sm-4">
-                <label class="form-check-label" for="bday">Return Day</label>
-                <input id="searchform-returnday" type="date" name="returnday" max="3000-12-31" min="1000-01-01" class="form-control" disabled>
-
+                    <div class="input-date m-0">
+                            <!-- <label class="form-check-label" for="bday">Departure Day</label> -->
+                            <input placeholder="Departure Day" id="searchform-departureday" type="text"
+                                class="datepicker-here my-date-time-picker form-control" data-language='en' data-position='bottom right' />
+                            <i class="far fa-calendar-alt icon-date m-auto"></i>
+                        </div>
             </div>
             <div class="col-lg-1 col-m-2 col-sm-5 d-flex justify-content-center">
                 <a name="" id="searchform-search-button" class="btn btn-primary" href="a2-detail.html" role="button">Search</a>
             </div>
         </div>
-
+        <script src="dist/js/i18n/datepicker.en.js"></script>
+        <script src="dist/js/datepicker.min.js"></script>
+        
     </div>
 </script>
