--- a/public/partials/handlebars-search-result-partial.html
+++ b/public/partials/handlebars-search-result-partial.html
@@ -311,6 +311,39 @@
 
                 </table>
             </div>
+            <div class="container">
+                <div class="row">
+                    
+                    <div class="col-4 pl-0">
+                        <table>
+                            <td>
+                                <div class="sleeper sleeper-disabled">
+                                    <div class="sleeper-rec"></div>
+                                </div>
+                            </td>
+                            <td  class="pl-2">Occupied</td>
+                        </table>
+                    </div>
+                    <div class="col-4 pl-0">
+                            <table><td>
+                                    <div class="sleeper">
+                                        <div class="sleeper-rec"></div>
+                                    </div>
+                                </td>
+                                <td class="pl-2">Available</td>
+                            </table>
+                    </div>
+                    <div class="col-4 pl-0">
+                            <table><td>
+                                    <div class="sleeper sleeper-active">
+                                        <div class="sleeper-rec"></div>
+                                    </div>
+                                </td>
+                                <td  class="pl-2">Selected</td>
+                            </table>
+                    </div>
+                </div>
+            </div>
         </div>
         <div id="ticket-info" class="container col-lg-6">
 
